--- a/content/post/2020-02-09-ferðamenn-á-íslandi.Rmd
+++ b/content/post/2020-02-09-ferðamenn-á-íslandi.Rmd
@@ -138,31 +138,43 @@ df_plot <- df_plot %>%
 
 texti <- "> 200% aukning \ná fimm árum"
 
+```
+
+
+```{r}
 ggplot(df_plot,
        aes(x = index_ar, y = rel_to_t0, col = rel_sign)) +
   geom_jitter(width = 0.1) +
   xlim(-2,5) + 
   geom_rect(xmin = -2, xmax = 0, ymin = -1, ymax = 6, 
-            fill = "lightgrey", alpha = 0.3, col = NA) + 
-  geom_point(aes(y = midgildi), col = rgb(33, 186, 69, maxColorValue = 255), size = 4) + 
-  geom_line(aes(y = midgildi), col = rgb(33, 186, 69, maxColorValue = 255), linetype = "dashed") + 
-  geom_point(aes(y = iceland), col = rgb(214, 39, 40, maxColorValue = 255), size = 4) + 
-  geom_line(aes(y = iceland), col = rgb(214, 39, 40, maxColorValue = 255), linetype = "dashed") + 
+            fill = "lightgrey", alpha = 0.3, col = NA) +
+  geom_point(aes(y = midgildi, col = "a"), size = 4) + 
+  geom_line(aes(y = midgildi, col = "a"), linetype = "dashed") +
+  geom_point(aes(y = iceland, col = "b"), size = 4) + 
+  geom_line(aes(y = iceland, col = "b"), linetype = "dashed") + 
   
-  scale_color_tableau() +
   theme_classic() +
-  # geom_hline(yintercept = 0, col = "lightgrey", linetype = "dashed") +
+  
+  scale_color_manual(values = c(rgb(33, 186, 69, maxColorValue = 255),
+                                rgb(214, 39, 40, maxColorValue = 255),
+                                "#4E79A7", "#F28E2B"),
+                     labels = c("Meðalþróun", "Ísland",
+                                "Lönd yfir fjölda á ári núll",
+                                "Lönd undir fjöla á ári núll")) +
+  
   labs(x = "Ár frá því að viðmið náðist",
        y = "Uppsafnaður vöxtur",
-       title = "Þróun á fjölda erlendra ferðamanna 47 landa sem náðu viðmiðinu",
-       subtitle = "Grænir punktar tákna miðgildisþróun og þeir rauðu Ísland") +
-  theme(legend.position = "none") +
+       title = "Þróun á fjölda erlendra ferðamanna 47 landa sem náðu viðmiðinu") + 
+  
   scale_y_continuous(labels = scales::percent) +
+  scale_x_continuous(breaks = seq(0, 4, by = 2),
+                     limits = c(-2, NA)) +
   annotate(geom = "text", x = -1, y = 3, label = (texti), size = 5, col = "darkblue") +
-  scale_x_continuous(breaks = seq(0, 4, by = 2), limits = c(-2, NA))
-
+  theme(legend.position = "bottom",
+        legend.title = element_blank())
 
 ```
+
 
 
 Í hluta þeirra landa sem náðu viðmiðinu fækkaði ferðamönnum í kjölfarið. Hér er ár **núll** í raun sá tími sem land náði viðmiðinu. Fyrsta árið eftir að hafa vaxið um 200% á fimm árum fækkaði ferðamönnum í tæplega fjórðungi landa. Í flestum tilfellum var sú fækkun þó tímabundin. Fimm árum eftir að hafa náð viðmiðinu voru aðeins 10% landa enn undir fjölda ferðamanna á ári "**núll**". Líkurnar eru því með Íslandi um að fjöldi ferðamanna muni ekki fækka um of á næstu árum.  
